# pbrt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: c-cpp.yml
src/: main.cpp
src/core/: CMakeLists.txt
src/core/camera/: ray.cpp  ray.h
src/core/concurrency/: thread_pool.cpp  thread_pool.h
src/core/geometry/: base.h
src/core/math/: matrix.cpp  matrix.h  quaternion3.cpp  quaternion3.h  transform.h  vec3.cpp  vec3.h  vector.cpp  vector.h  vector3.cpp  vector3.h
src/core/multi-thread/: common.h  thread_pool.h
src/core/shape/: base.h  bound.h  plane.h
src/core/test/: common.h  test_main.cpp
